# brain-ws

./: .gitignore  .gitmodules  README.md  install_ubuntu.sh  requirements.txt  start_ubuntu.sh
.github/workflows/: ci.yml
docker/models/gpu/: .env  Modelfile  docker-compose.yaml  dockerfile  readme.md
docker/models/optimized/destilled/: ModelFile
docs/: voice_architecture_tmp_readme.md
docs/comm_protocol/: user_to_llm_communication.md
docs/requirements/: requirements.txt
docs/use_cases/: uses_cases.md
model/manifest/: README.md  distilled-1b-robot-router.json  models.json
model/system_prompt/: MODELFILE
optimization/: readme.md  requirments.txt
optimization/dataset/: dataset.stats.json
optimization/dataset/explicit/: explicit_prompts.jsonl  explicit_results.jsonl
optimization/dataset/implicit/: implicit_prompts.jsonl  implicit_results.jsonl
optimization/dataset/invalids/: invalid_prompts.jsonl  invalid_results.jsonl
optimization/dataset/natural_language/: natural_language_prompts.jsonl  natural_language_results.jsonl
optimization/dataset/training/: eval.jsonl
optimization/scripts/benchmarks/: common.py  flywheel_benchmark.py
optimization/scripts/dataset_creation/: analyze_invalid_output.py  dataset_creator.py  generate_datasets.py  pipeline.py  sintetic_dataset_generator.py  teacher_dataset_evaluator.py
optimization/scripts/dataset_creation/strategies/: __init__.py  base_strategy.py  stt_noise.py  stt_noise_augmenter.py  uc01_explicit_move_to.py  uc01b_explicit_move_to_unknown_landmark.py  uc02_explicit_show_around_generic.py  uc03_explicit_show_around_specific.py  uc04_explicit_cancel.py  uc05_conversation.py  uc06_landmark_query.py  uc07_implicit_command.py  uc08_clarification.py  uc09_confirmation.py  uc11_multi_command_rejection.py  uc13_prompt_injection.py  uc14_protocol_violation.py
optimization/scripts/destillation/: README.md  config.yaml  download_and_install_target_model.sh  export_gguf.py  prepare_training_data.py  rebuild_dataset_after_validation.py  train_student.py  utils.py
optimization/scripts/exporters/: export_gguf.py  export_intel_openvino.py
src/executive/: CMakeLists.txt  package.xml
src/executive/include/executive/: command_builder.h  command_executor.h  command_factory.h  execution_context.h  executive_node.h  high_level_command.h  landmark_registry.h  move_to_command.h  show_me_around_command.h
src/executive/src/: executive_node.cpp
src/experts/: CMakeLists.txt  package.xml
src/experts/include/experts/: amcl_expert_node.h  landmarks_expert_node.h  localization_expert_node.h  map_expert_node.h  nav2_expert_node.h  sensor_expert_node.h
src/experts/src/: amcl_expert_node.cpp  landmarks_expert_node.cpp  localization_expert_node.cpp  map_expert_node.cpp  nav2_expert_node.cpp  sensor_expert_node.cpp
src/model_manager/: CMakeLists.txt  package.xml
src/model_manager/include/model_manager/: model_manager_node.h
src/model_manager/src/: model_manager_node.cpp
src/utilities/: CMakeLists.txt  package.xml
src/utilities/config/: landmarks_config.yaml
src/utilities/include/utilities/state_machine/: generic_state_machine.h
src/utilities/scripts/: landmarks_publisher.py
src/utilities/tests/: test_generic_state_machine.cpp
